# Beyond-the-Bookshelf

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_Data_Exploration.ipynb  02_Vector_search.ipynb  03_Text_classification.ipynb  04_Sentiment_analysis.ipynb
src/app/: main.py
src/app/api/: data_loader.py  recommender.py
src/app/templates/: index.html
